force-app/main/default/objects/SEL_AsyncDml__e/SEL_AsyncDml__e.object-meta.xml
<CustomObject>
    <description>Processes the DML operations asynchronously. This is part of the Salesforce Enterprise Library (SEL) created by Macjules Sevilla.</description>
    <label>Async DML Platform Event</label>
    <pluralLabel>Async DML Platform Events</pluralLabel>
</CustomObject>