force-app/main/default/objects/SEL_AsyncDml__e/fields/SEL_Action__c.field-meta.xml
<CustomField>
    <fullName>SEL_Action__c</fullName>
    <description>Can be one of the following values: insert, update, upsert, delete or undelete.</description>
    <label>Action</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>