force-app/main/default/objects/SEL_AsyncDml__e/fields/SEL_Object__c.field-meta.xml
<CustomField>
    <fullName>SEL_Object__c</fullName>
    <description>The object API of the record to process.</description>
    <label>Object</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>