force-app/main/default/objects/SEL_AsyncDml__e/fields/SEL_Record__c.field-meta.xml
<CustomField>
    <fullName>SEL_Record__c</fullName>
    <description>The serialized version of the record to process. This is not bulkified, i.e. one event message equals one record.</description>
    <label>Record</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>